--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-cayman
+markdown: kramdown
+title: "أشياء لازم تتفاهم مع شركة البرمجة عليها بخصوص تطبيقك الجديد"
+name: "أشياء لازم تتفاهم مع شركة البرمجة عليها بخصوص تطبيقك الجديد"
+description: "مرحبا يا مطور, او يا صاحب البزنس الجديد أكيد إنك متحمس لتطبيقك الجديد اللي ممكن يكون بداية نجاحك في عالم البزنس الإلكتروني. هذا المستودع تم إنشاءه عشان نسجل فيه الأشياء اللي يحتاج الشخص يفكر فيها لما يجي يسوي تطبيق جديد. التركيز في هذا المستودع على الطلبات والأمور اللي لازم تنتبه لها عند التواصل مع شركة برمجة أو شخص بيبرمج لك, ولفريق العمل اللي شغالين على جانب الـ IT من البزنس حقك"
