--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,14 @@
+# Theme configuration
 theme: jekyll-theme-cayman
+
+# Markdown processor
 markdown: kramdown
+
+# Title of the site
 title: "أشياء لازم تتفاهم مع شركة البرمجة عليها بخصوص تطبيقك الجديد"
+
+# Name of the site
 name: "أشياء لازم تتفاهم مع شركة البرمجة عليها بخصوص تطبيقك الجديد"
+
+# Description of the site
 description: "مرحبا يا مطور, او يا صاحب البزنس الجديد أكيد إنك متحمس لتطبيقك الجديد اللي ممكن يكون بداية نجاحك في عالم البزنس الإلكتروني. هذا المستودع تم إنشاءه عشان نسجل فيه الأشياء اللي يحتاج الشخص يفكر فيها لما يجي يسوي تطبيق جديد. التركيز في هذا المستودع على الطلبات والأمور اللي لازم تنتبه لها عند التواصل مع شركة برمجة أو شخص بيبرمج لك, ولفريق العمل اللي شغالين على جانب الـ IT من البزنس حقك"
